Added unit tests for OutboxEventDispatcher

--- a/src/Outbox/Outbox.csproj
+++ b/src/Outbox/Outbox.csproj
@@ -12,6 +12,7 @@
 
 	<ItemGroup>
 		<InternalsVisibleTo Include="Outbox.Tests.Unit" />
+		<InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
 	</ItemGroup>
 
 </Project>
