Added DbContext, configuration and repository implementation for PostgreSql

--- a/src/Outbox.PostgreSql/Outbox.PostgreSql.csproj
+++ b/src/Outbox.PostgreSql/Outbox.PostgreSql.csproj
@@ -6,6 +6,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\Outbox\Outbox.csproj" />
 	</ItemGroup>
 
