--- a/samples/Outbox.Samples.Api/appsettings.json
+++ b/samples/Outbox.Samples.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "postgres": {
+    "connectionString": "Host=localhost;Database=Outbox;Username=postgres;Password="
+  }
 }
