Added PoisonQueueItemConfiguration and migration

--- a/samples/Outbox.Samples.Api/appsettings.json
+++ b/samples/Outbox.Samples.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "postgres": {
-    "connectionString": "Host=localhost;Database=Outbox;Username=postgres;Password="
+    "connectionString": "Host=localhost;Database=Outbox-demo;Username=postgres;Password="
   }
 }
