--- a/src/Outbox.PostgreSql/Outbox.PostgreSql.csproj
+++ b/src/Outbox.PostgreSql/Outbox.PostgreSql.csproj
@@ -13,4 +13,8 @@
 		<ProjectReference Include="..\Outbox\Outbox.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="EntityFramework\Migrations\" />
+	</ItemGroup>
+
 </Project>
