Added OutboxMessageFactory in tests

--- a/src/Outbox/Outbox.csproj
+++ b/src/Outbox/Outbox.csproj
@@ -11,6 +11,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<InternalsVisibleTo Include="Outbox.Tests.Shared" />
 		<InternalsVisibleTo Include="Outbox.Tests.Unit" />
 		<InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
 	</ItemGroup>
