Added random options to OrderCreatedBuilder

--- a/tests/Outbox.Tests.Shared/Outbox.Tests.Shared.csproj
+++ b/tests/Outbox.Tests.Shared/Outbox.Tests.Shared.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="35.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\src\Outbox\Outbox.csproj" />
   </ItemGroup>
 
